<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.homework.triviaapp.StatsActivity">

    <TextView
        android:text="@string/yourPerformance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/progressBar_result"/>

    <TextView
        android:text="@string/correctAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />

    <Button
        android:text="@string/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_finish"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:textColor="@android:color/white" />

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_result"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:layout_above="@+id/button_finish"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="71dp"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/textView_result"
        android:layout_toStartOf="@+id/textView_result"
        android:max="100"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_result"
        android:layout_alignBottom="@+id/progressBar_result"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="3dp"
        android:background="@drawable/border"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView3"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="@drawable/border">

        <LinearLayout
            android:id="@+id/linearLayout_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</RelativeLayout>
